--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
       </thead>
       <tbody>
         <tr>
-          <td data-val="laptop">Laptop</td>
-          <td data-val="999">$999</td>
-          <td data-val="electronics">Electronics</td>
-          <td data-val="15">15</td>
+          <td>Laptop</td>
+          <td>$999</td>
+          <td>Electronics</td>
+          <td>15</td>
         </tr>
         <tr>
-          <td data-val="coffee-mug">Coffee Mug</td>
-          <td data-val="12">$12</td>
-          <td data-val="kitchen">Kitchen</td>
-          <td data-val="50">50</td>
+          <td>Coffee Mug</td>
+          <td>$12</td>
+          <td>Kitchen</td>
+          <td>50</td>
         </tr>
         <tr>
-          <td data-val="notebook">Notebook</td>
-          <td data-val="5">$5</td>
-          <td data-val="office">Office</td>
-          <td data-val="100">100</td>
+          <td>Notebook</td>
+          <td>$5</td>
+          <td>Office</td>
+          <td>100</td>
         </tr>
       </tbody>
     </table>
@@ -71,22 +71,22 @@
       </thead>
       <tbody>
         <tr>
-          <td data-val="laptop">Laptop</td>
-          <td data-val="999">$999</td>
-          <td data-val="electronics">Electronics</td>
-          <td data-val="15">15</td>
+          <td>Laptop</td>
+          <td>$999</td>
+          <td>Electronics</td>
+          <td>15</td>
         </tr>
         <tr>
-          <td data-val="coffee-mug">Coffee Mug</td>
-          <td data-val="12">$12</td>
-          <td data-val="kitchen">Kitchen</td>
-          <td data-val="50">50</td>
+          <td>Coffee Mug</td>
+          <td>$12</td>
+          <td>Kitchen</td>
+          <td>50</td>
         </tr>
         <tr>
-          <td data-val="notebook">Notebook</td>
-          <td data-val="5">$5</td>
-          <td data-val="office">Office</td>
-          <td data-val="100">100</td>
+          <td>Notebook</td>
+          <td>$5</td>
+          <td>Office</td>
+          <td>100</td>
         </tr>
       </tbody>
     </table>
